peac_dev/force-app/main/default/objects/Escalation_Adjustments__c/Escalation_Adjustments__c.object-meta.xml
<CustomObject>
    <description>Escalation Adjustments captures information of Pool with rates. Data comes from Infolease via data warehouse. Jira ticket DP-1090</description>
    <label>Escalation Adjustments</label>
    <nameField>
        <displayFormat>EP-{0000000}</displayFormat>
        <label>Escalation Adjustments Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Escalation Adjustments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>