peac_dev/force-app/main/default/objects/Escalation_Adjustments__c/fields/Adjustment_Date__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Date__c</fullName>
    <description>Get the Adjustment Date value from InfoLease</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Adjustment Date</label>
    <type>Date</type>
</CustomField>