peac_dev/force-app/main/default/objects/Escalation_Adjustments__c/fields/Adjustment_Method__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Method__c</fullName>
    <description>Adjustment Method could be Percentage, Fixed or Other</description>
    <label>Adjustment Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Percentage</fullName>
                <default>true</default>
                <label>Percentage</label>
            </value>
            <value>
                <fullName>Fixed</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>