peac_dev/force-app/main/default/objects/Escalation_Adjustments__c/fields/Adjustment_Value_or_Amount__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Value_or_Amount__c</fullName>
    <description>This Formula field rounds the value of the number filed &apos;Adjustment Value&apos;, to exactly 5 decimal places. It is designed for accurate display in report where additional decimal places are not required.</description>
    <formula>ROUND( Adjustment_Value__c ,5)</formula>
    <label>Adjustment Value (% or Amount)</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>