peac_dev/force-app/main/default/objects/Escalation_Adjustments__c/fields/Audit_Pool__c.field-meta.xml
<CustomField>
    <fullName>Audit_Pool__c</fullName>
    <description>Pool is tagged with every Escalation Adjustment record</description>
    <label>Audit Pool</label>
    <referenceTo>Pool__c</referenceTo>
    <relationshipLabel>Escalation Adjustments</relationshipLabel>
    <relationshipName>Pool_Escalation_Adjustments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>