peac_dev/force-app/main/default/objects/Escalation_Adjustments__c/fields/Change_Value__c.field-meta.xml
<CustomField>
    <fullName>Change_Value__c</fullName>
    <description>In case of Method = percentage, Change = Percentage of Current Rate
In case of Method = Fixed, Change = Adjustment Value
Refer to the use case attached for calculation
Number field with 5 decimals</description>
    <label>Change Value</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>