peac_dev/force-app/main/default/objects/Escalation_Adjustments__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <description>Denotes the Date from when the Adjustment Current rate is active from.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>