peac_dev/force-app/main/default/objects/Escalation_Adjustments__c/fields/Escalated_Rate__c.field-meta.xml
<CustomField>
    <fullName>Escalated_Rate__c</fullName>
    <description>New Rate = Current Rate + Adjustment Value
Number field with 5 decimals</description>
    <label>Escalated Rate</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>