peac_dev/force-app/main/default/objects/Escalation_Adjustments__c/fields/Escalated_Rate_Read__c.field-meta.xml
<CustomField>
    <fullName>Escalated_Rate_Read__c</fullName>
    <description>Use this field for reporting</description>
    <formula>ROUND(  Escalated_Rate__c  ,5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Escalated Rate</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>