peac_dev/force-app/main/default/objects/Escalation_Adjustments__c/fields/RateRead__c.field-meta.xml
<CustomField>
    <fullName>RateRead__c</fullName>
    <description>Round the rate field for reporting</description>
    <formula>ROUND( Rate__c ,5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rate</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>